# PrimoWorldsBot

./: .gitignore  main.py  pyproject.toml  requirements.txt
BotCode/: __init__.py
BotCode/easteggs/: __init__.py
BotCode/easteggs/holidays/: __init__.py  march8.py
BotCode/inline/: __init__.py  reklama.py
BotCode/keyboards/: __init__.py
BotCode/keyboards/inline_kb/: __init__.py  march8_inline_kb.py  (+2 more)
BotCode/routers/: __init__.py
BotCode/servey/: __init__.py  adm_answer.py
BotCode/utils/: __init__.py  admin_list.py  all_admins_hide.py  weather_api.py
BotLibrary/: __init__.py  bots.py  logs.py
BotLibrary/analytics/: __init__.py  type_chat.py  type_msg.py
BotLibrary/loggers/: __init__.py  custom_loggers.py  logs.py  msg_logger.py  start_info_out.py
BotLibrary/samples/: __init__.py  inline_kb_sample.py  keyboards_sample.py  reply_kb_sample.py  user_cmd_class.py
BotLibrary/sql/: __init__.py  db_class.py
BotLibrary/system/: __init__.py  bot_edit.py  bots.py  directory.py
BotLibrary/timer/: __init__.py  start_time.py
BotLibrary/validators/: __init__.py  email_valid.py  normal_word.py  url_valid.py  username.py
Documentation/: FIX_LIST.md  docs.md
ProjectsFiles/: __init__.py
ProjectsFiles/configs/: .env  __init__.py  config.py  logs_config.py  primoenv.py  project_path.py
ProjectsFiles/database/: users.db
SQLite3/: __init__.py  bd.db  bd.py  bd_user.db
SQLite3/bd_func/: __init__.py  bd_add_user.py  bd_get_user.py  bd_update_user.py  bd_update_user_msg.py  bd_user_create.py  status_user.py  username_to_id.py
Test/: __init__.py
(+27 files in other folders)
