[project]
name = "primoworld"
version = "0.1.0"
description = "Шаблон бота для проекта PrimoWorlds"
authors = [
    {name = "Verum"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "colorama (>=0.4.6,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
